# ROS2_Walking_Pattern_Generator

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  客制化实施方案.md  项目文档.md
Log/: WPG_log_plot.m
Records/plot_files/: matlab_plot.m
draft_programs/rust/fk_ik/: Cargo.toml
foot_step_planner/include/foot_step_planner/: FootStepPlanner.hpp
foot_step_planner/src/: FootStepPlanner.cpp
kinematics/include/kinematics/: ForwardKinematics.hpp  InverseKinematics.hpp  Jacobian.hpp
kinematics/src/: ForwardKinematics.cpp
rdc_kinematics/: CMakeLists.txt  package.xml  plugins.xml
rdc_kinematics/include/rdc_kinematics/: ForwardKinematics.hpp  InverseKinematics.hpp  Jacobian.hpp
rdc_kinematics/src/: ForwardKinematics.cpp  InverseKinematics.cpp  Jacobian.cpp
rdc_webots_robot_handler/: CMakeLists.txt  package.xml  webots_robot_handler.xml
rdc_webots_robot_handler/include/rdc_webots_robot_handler/: WebotsRobotHandler.hpp
rdc_webots_robot_handler/launch/: start_launch.py
rdc_webots_robot_handler/resource/: webots_rdc_robot_description.urdf
rdc_webots_robot_handler/src/: WebotsRobotHandler.cpp
robot_bringup/config/: param_debug_mode.yaml  param_mode_switch.yaml
robot_bringup/src/: ParameterServer.cpp
robot_manager/src/: robot_manager.cpp
robot_recorder/launch/: robot_recorder.launch.py
robot_tools/: README.md
robot_tools/robot_tools/: model_parameter_generator.py
robot_visualizer/launch/: robot_visualizer.launch.py
scripts/: debug_colored.py  debug_multiview.py  debug_urdf.py  diagnose_mesh.py  render_simple_working.py  simple_walking_gait.py
src/Records/: motion_table.json
tools/: export_motion_table.py
walking_pattern_generator/src/: LinearInvertedPendulumModel.cpp
webots_robot_handler/: CMakeLists.txt  webots_robot_handler.xml
webots_robot_handler/launch/: simple_walking_launch.py  start_launch.py
webots_robot_handler/resource/: webots_simple_walking_robot_description.urdf
webots_robot_handler/src/: SimpleWalkingRobotHandler.cpp
webots_robot_handler/worlds/: .webots_simple_world.wbproj  simple_walking_world.wbt  webots_simple_world.wbt
(+26 files in other folders)
